# remotelyx-dashboard

./: .gitignore  CONTRIBUTING.md  DOCKER_SETUP.md  FINAL_STATUS_REPORT.md  GEMINI_AI_SETUP.md  IMPLEMENTATION_SUMMARY.md  MONGODB_AND_API_REFERENCE.md  N8N_MONGODB_SETUP.md  POSTMAN_API_TESTING_GUIDE.md  POSTMAN_TESTING_GUIDE.md  README.md  SCRAPED_JOBS_SETUP_GUIDE.md  TOP_SKILLS_IMPLEMENTATION.md  api_server_clean.py  config.py  database.py  docker-compose.yml  docker-start.bat  docker-start.sh  example_usage.py  gamma-scraper-server.js  gamma_job_scraper.py  quick-start.sh  requirements.txt  scraped_job.json  scrapegamma.js  scraper_core.py  setup-gemini.bat  setup-ngrok.bat  setup-ngrok.sh  simple-gamma-server.js  test_api.sh  test_scraped_import.py
server/: .env.example  Dockerfile  FRONTEND_INTEGRATION_EXAMPLE.md  MIGRATIONS_README.md  README.md  README_BACKEND.md  STATUS_UPDATE_SUMMARY.md  check_db.py  db.sh  main.py  manage.py  manage_db.py  nohup.out  pyproject.toml  requirements.txt  run_dev.sh  run_migration.sh  seed_frontend_data.py  setup_database.py  simple_seeder.py  start.sh  start_server.py  test_api.sh  test_raw_content.py  test_scraped_data.py  test_status_updates.py
server/app/: __init__.py
server/app/controllers/: analytics_controller.py  auth_controller.py  dashboard_controller.py  job_controller.py  scraped_jobs_controller.py  scraper_controller.py  seeder_controller.py
server/app/models/: job.py  (+4 more)
server/migrations/: add_scraped_job_fields.py  add_status_field.py  init-mongo.js  migration_manager.py
server/seeds/: __init__.py  seed_manager.py
(+63 files in other folders)
